WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252841
REGRESSION(
260575@main
) [GPUP] Video disappears during playback with UI-Side compositing enabled
https://bugs.webkit.org/show_bug.cgi?id=252841
Summary
REGRESSION(260575@main) [GPUP] Video disappears during playback with UI-Side ...
Jer Noble
Reported
2023-02-23 10:24:59 PST
REGRESSION(
260575@main
) [GPUP] Video disappears during playback with UI-Side compositing enabled
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2023-02-23 10:25:07 PST
<
rdar://problem/105835986
>
Jer Noble
Comment 2
2023-02-23 10:30:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10602
EWS
Comment 3
2023-02-23 19:05:26 PST
Committed
260774@main
(b72881d351bc): <
https://commits.webkit.org/260774@main
> Reviewed commits have been landed. Closing PR #10602 and removing active labels.
Ryan Haddad
Comment 4
2023-03-06 15:58:48 PST
***
Bug 252695
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug