REGRESSION(260575@main) [GPUP] Video disappears during playback with UI-Side compositing enabled https://bugs.webkit.org/show_bug.cgi?id=252841 rdar://105835986

Reviewed by Per Arne Vollan.

Fix an incorrect pragma that effectively disabled the "no double hosting" logic for media in GPU process.

* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::setContentsToVideoElement):
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/GraphicsLayerCARemote.cpp:
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/GraphicsLayerCARemote.h:
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/PlatformCALayerRemote.cpp:

Canonical link: https://commits.webkit.org/260774@main